microservices-on-openshift/istio_scenarios/istio_mtls_authn_authz_rbac_deprecated/amazin-prd-gateway.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: amazin-gateway-prod
# spec:
#   selector:
#     istio: ingressgateway # use istio default controller
#   servers:
#   - port:
#       number: 80
#       name: http
#       protocol: HTTP
#     hosts:
#     - "*"
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: amazin-gateway-prod
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key      
    hosts:
    - "*" 
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: amazin-prd
spec:
  hosts:
  - "*"
  gateways:
  - amazin-gateway-prod
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: api-gateway-prd
        port:
          number: 8080
