microservices-on-openshift/istio_scenarios/istio_mtls_authn_authz_rbac_deprecated/default-destrule-mtls.yaml
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
  namespace: "istio-system"
spec:
  host: "*.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
